server/src/linter/AleoAntlr/AleoParser.ts
// Generated from Aleo.g4 by ANTLR 4.13.0
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import AleoListener from "./AleoListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class AleoParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly T__39 = 40;
	public static readonly T__40 = 41;
	public static readonly T__41 = 42;
	public static readonly T__42 = 43;
	public static readonly T__43 = 44;
	public static readonly T__44 = 45;
	public static readonly T__45 = 46;
	public static readonly T__46 = 47;
	public static readonly T__47 = 48;
	public static readonly T__48 = 49;
	public static readonly T__49 = 50;
	public static readonly T__50 = 51;
	public static readonly T__51 = 52;
	public static readonly T__52 = 53;
	public static readonly T__53 = 54;
	public static readonly T__54 = 55;
	public static readonly T__55 = 56;
	public static readonly T__56 = 57;
	public static readonly T__57 = 58;
	public static readonly T__58 = 59;
	public static readonly T__59 = 60;
	public static readonly T__60 = 61;
	public static readonly T__61 = 62;
	public static readonly T__62 = 63;
	public static readonly T__63 = 64;
	public static readonly T__64 = 65;
	public static readonly T__65 = 66;
	public static readonly T__66 = 67;
	public static readonly T__67 = 68;
	public static readonly T__68 = 69;
	public static readonly T__69 = 70;
	public static readonly T__70 = 71;
	public static readonly T__71 = 72;
	public static readonly T__72 = 73;
	public static readonly T__73 = 74;
	public static readonly T__74 = 75;
	public static readonly T__75 = 76;
	public static readonly T__76 = 77;
	public static readonly T__77 = 78;
	public static readonly T__78 = 79;
	public static readonly T__79 = 80;
	public static readonly DIGIT = 81;
	public static readonly Addressliteral = 82;
	public static readonly ADDRESS_TYPE = 83;
	public static readonly FIELD_TYPE = 84;
	public static readonly GROUP_TYPE = 85;
	public static readonly SCALAR_TYPE = 86;
	public static readonly BRANCH_OP = 87;
	public static readonly UNSIGNED_TYPE = 88;
	public static readonly SIGNED_TYPE = 89;
	public static readonly BOOLEAN_TYPE = 90;
	public static readonly STRING_TYPE = 91;
	public static readonly Ternary_op = 92;
	public static readonly Commit_op = 93;
	public static readonly Hash_op = 94;
	public static readonly CAST_OP = 95;
	public static readonly Identifier = 96;
	public static readonly Signed_literal = 97;
	public static readonly Unsigned_literal = 98;
	public static readonly Field_literal = 99;
	public static readonly Group_literal = 100;
	public static readonly Scalar_literal = 101;
	public static readonly BOOLEAN_LITERAL = 102;
	public static readonly WS = 103;
	public static readonly COMMENT = 104;
	public static readonly LINE_COMMENT = 105;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_unarp_op = 0;
	public static readonly RULE_binary_op = 1;
	public static readonly RULE_is_op = 2;
	public static readonly RULE_assert_op = 3;
	public static readonly RULE_letter = 4;
	public static readonly RULE_register = 5;
	public static readonly RULE_register_access = 6;
	public static readonly RULE_identifier = 7;
	public static readonly RULE_program_name = 8;
	public static readonly RULE_program_domain = 9;
	public static readonly RULE_program_id = 10;
	public static readonly RULE_locator = 11;
	public static readonly RULE_integer_literal = 12;
	public static readonly RULE_arithmetic_literal = 13;
	public static readonly RULE_literal = 14;
	public static readonly RULE_operand = 15;
	public static readonly RULE_integer_type = 16;
	public static readonly RULE_arithmetic_type = 17;
	public static readonly RULE_literal_type = 18;
	public static readonly RULE_plaintext_type = 19;
	public static readonly RULE_value_type = 20;
	public static readonly RULE_finalize_type = 21;
	public static readonly RULE_entry_type = 22;
	public static readonly RULE_register_type = 23;
	public static readonly RULE_import_1 = 24;
	public static readonly RULE_mapping = 25;
	public static readonly RULE_mapping_key = 26;
	public static readonly RULE_mapping_value = 27;
	public static readonly RULE_struct_1 = 28;
	public static readonly RULE_tuple = 29;
	public static readonly RULE_record = 30;
	public static readonly RULE_entry = 31;
	public static readonly RULE_cast_destination = 32;
	public static readonly RULE_unary = 33;
	public static readonly RULE_binary = 34;
	public static readonly RULE_ternary = 35;
	public static readonly RULE_is_1 = 36;
	public static readonly RULE_assert_1 = 37;
	public static readonly RULE_commit = 38;
	public static readonly RULE_hash = 39;
	public static readonly RULE_cast = 40;
	public static readonly RULE_call = 41;
	public static readonly RULE_instruction = 42;
	public static readonly RULE_contains = 43;
	public static readonly RULE_get = 44;
	public static readonly RULE_get_or_use = 45;
	public static readonly RULE_set = 46;
	public static readonly RULE_remove = 47;
	public static readonly RULE_random = 48;
	public static readonly RULE_label = 49;
	public static readonly RULE_position = 50;
	public static readonly RULE_branch = 51;
	public static readonly RULE_command = 52;
	public static readonly RULE_finalize_command = 53;
	public static readonly RULE_closure = 54;
	public static readonly RULE_closure_input = 55;
	public static readonly RULE_closure_output = 56;
	public static readonly RULE_function = 57;
	public static readonly RULE_function_input = 58;
	public static readonly RULE_function_output = 59;
	public static readonly RULE_finalize = 60;
	public static readonly RULE_finalize_input = 61;
	public static readonly RULE_finalize_output = 62;
	public static readonly RULE_sourceUnit = 63;
	public static readonly literalNames: (string | null)[] = [ null, "'abs'", 
                                                            "'abs.w'", "'double'", 
                                                            "'inv'", "'neg'", 
                                                            "'not'", "'square'", 
                                                            "'sqrt'", "'add'", 
                                                            "'add.w'", "'sub'", 
                                                            "'sub.w'", "'mul'", 
                                                            "'mul.w'", "'div'", 
                                                            "'div.w'", "'rem'", 
                                                            "'rem.w'", "'mod'", 
                                                            "'pow'", "'pow.w'", 
                                                            "'shl'", "'shl.w'", 
                                                            "'shr'", "'shr.w'", 
                                                            "'and'", "'or'", 
                                                            "'xor'", "'nand'", 
                                                            "'nor'", "'gt'", 
                                                            "'gte'", "'lt'", 
                                                            "'lte'", "'is.eq'", 
                                                            "'is.neq'", 
                                                            "'assert.eq'", 
                                                            "'assert.neq'", 
                                                            "'.'", "'owner'", 
                                                            "'_'", "'/'", 
                                                            "'group::GEN'", 
                                                            "'self.caller'", 
                                                            "'block.height'", 
                                                            "'.constant'", 
                                                            "'.public'", 
                                                            "'.private'", 
                                                            "'.record'", 
                                                            "'import'", 
                                                            "';'", "'mapping'", 
                                                            "':'", "'key'", 
                                                            "'as'", "'value'", 
                                                            "'struct'", 
                                                            "'record'", 
                                                            "'gates'", "'u64.public'", 
                                                            "'u64.private'", 
                                                            "'group.x'", 
                                                            "'group.y'", 
                                                            "'into'", "'call'", 
                                                            "'contains'", 
                                                            "'['", "']'", 
                                                            "'get'", "'get.or_use'", 
                                                            "'set'", "'remove'", 
                                                            "'rand.chacha'", 
                                                            "'position'", 
                                                            "'finalize'", 
                                                            "'closure'", 
                                                            "'input'", "'output'", 
                                                            "'function'", 
                                                            "'program'", 
                                                            null, null, 
                                                            "'address'", 
                                                            "'field'", "'group'", 
                                                            "'scalar'", 
                                                            null, null, 
                                                            null, "'boolean'", 
                                                            "'string'", 
                                                            "'ternary'", 
                                                            null, null, 
                                                            "'cast'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, "DIGIT", 
                                                             "Addressliteral", 
                                                             "ADDRESS_TYPE", 
                                                             "FIELD_TYPE", 
                                                             "GROUP_TYPE", 
                                                             "SCALAR_TYPE", 
                                                             "BRANCH_OP", 
                                                             "UNSIGNED_TYPE", 
                                                             "SIGNED_TYPE", 
                                                             "BOOLEAN_TYPE", 
                                                             "STRING_TYPE", 
                                                             "Ternary_op", 
                                                             "Commit_op", 
                                                             "Hash_op", 
                                                             "CAST_OP", 
                                                             "Identifier", 
                                                             "Signed_literal", 
                                                             "Unsigned_literal", 
                                                             "Field_literal", 
                                                             "Group_literal", 
                                                             "Scalar_literal", 
                                                             "BOOLEAN_LITERAL", 
                                                             "WS", "COMMENT", 
                                                             "LINE_COMMENT" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"unarp_op", "binary_op", "is_op", "assert_op", "letter", "register", "register_access", 
		"identifier", "program_name", "program_domain", "program_id", "locator", 
		"integer_literal", "arithmetic_literal", "literal", "operand", "integer_type", 
		"arithmetic_type", "literal_type", "plaintext_type", "value_type", "finalize_type", 
		"entry_type", "register_type", "import_1", "mapping", "mapping_key", "mapping_value", 
		"struct_1", "tuple", "record", "entry", "cast_destination", "unary", "binary", 
		"ternary", "is_1", "assert_1", "commit", "hash", "cast", "call", "instruction", 
		"contains", "get", "get_or_use", "set", "remove", "random", "label", "position", 
		"branch", "command", "finalize_command", "closure", "closure_input", "closure_output", 
		"function", "function_input", "function_output", "finalize", "finalize_input", 
		"finalize_output", "sourceUnit",
	];
	public get grammarFileName(): string { return "Aleo.g4"; }
	public get literalNames(): (string | null)[] { return AleoParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return AleoParser.symbolicNames; }
	public get ruleNames(): string[] { return AleoParser.ruleNames; }
	public get serializedATN(): number[] { return AleoParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, AleoParser._ATN, AleoParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public unarp_op(): Unarp_opContext {
		let localctx: Unarp_opContext = new Unarp_opContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, AleoParser.RULE_unarp_op);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 128;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 510) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public binary_op(): Binary_opContext {
		let localctx: Binary_opContext = new Binary_opContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, AleoParser.RULE_binary_op);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 130;
			_la = this._input.LA(1);
			if(!(((((_la - 9)) & ~0x1F) === 0 && ((1 << (_la - 9)) & 67108863) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public is_op(): Is_opContext {
		let localctx: Is_opContext = new Is_opContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, AleoParser.RULE_is_op);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 132;
			_la = this._input.LA(1);
			if(!(_la===35 || _la===36)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public assert_op(): Assert_opContext {
		let localctx: Assert_opContext = new Assert_opContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, AleoParser.RULE_assert_op);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 134;
			_la = this._input.LA(1);
			if(!(_la===37 || _la===38)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public letter(): LetterContext {
		let localctx: LetterContext = new LetterContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, AleoParser.RULE_letter);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 136;
			this.match(AleoParser.Identifier);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public register(): RegisterContext {
		let localctx: RegisterContext = new RegisterContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, AleoParser.RULE_register);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 138;
			this.match(AleoParser.Identifier);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public register_access(): Register_accessContext {
		let localctx: Register_accessContext = new Register_accessContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, AleoParser.RULE_register_access);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 140;
			this.register();
			this.state = 148;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===39) {
				{
				{
				this.state = 141;
				this.match(AleoParser.T__38);
				this.state = 144;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case 40:
					{
					this.state = 142;
					this.match(AleoParser.T__39);
					}
					break;
				case 96:
					{
					this.state = 143;
					this.identifier();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				this.state = 150;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public identifier(): IdentifierContext {
		let localctx: IdentifierContext = new IdentifierContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, AleoParser.RULE_identifier);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 151;
			this.letter();
			this.state = 157;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 3, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					this.state = 155;
					this._errHandler.sync(this);
					switch (this._input.LA(1)) {
					case 96:
						{
						this.state = 152;
						this.letter();
						}
						break;
					case 81:
						{
						this.state = 153;
						this.match(AleoParser.DIGIT);
						}
						break;
					case 41:
						{
						this.state = 154;
						this.match(AleoParser.T__40);
						}
						break;
					default:
